--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -6,13 +6,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Info3180 Lab 2</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="{{ url_for('home') }}">Home</a></li>
-            <li><a href="{{ url_for('about') }}">About</a></li>
+            <li class="active"><a href="{{ url_for('about') }}">About</a></li>
+            <li class="active"><a href="{{ url_for('profile') }}">Profile</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
